--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,19 @@ atomicwrites==1.2.1
 attrs==18.2.0
 Click==7.0
 colorama==0.4.0
+flasgger==0.9.1
 Flask==1.0.2
 gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
+jsonschema==2.6.0
 MarkupSafe==1.0
+mistune==0.8.4
 more-itertools==4.3.0
 nose==1.3.7
 pluggy==0.8.0
 py==1.7.0
 pytest==3.8.2
+PyYAML==3.13
 six==1.11.0
 Werkzeug==0.14.1
