--- a/requirements.txt
+++ b/requirements.txt
@@ -4,16 +4,20 @@ Click==7.0
 colorama==0.4.0
 flasgger==0.9.1
 Flask==1.0.2
+Flask-Login==0.4.1
 gunicorn==19.9.0
 itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
 MarkupSafe==1.0
 mistune==0.8.4
+mock==2.0.0
 more-itertools==4.3.0
 nose==1.3.7
+pbr==5.0.0
 pluggy==0.8.0
 py==1.7.0
+PyJWT==1.4.2
 pytest==3.8.2
 PyYAML==3.13
 six==1.11.0
