--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ install:
   - pip install coveralls
 
 # command to run tests
-script: nosetests  --with-coverage --cover-package=tests
+script: nosetests  --with-coverage --cover-package=api
 
 after_success:
   - coveralls
