Modify coveralls file[Delivers #161663195]

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 atomicwrites==1.2.1
 attrs==18.2.0
+certifi==2018.10.15
+chardet==3.0.4
 Click==7.0
 colorama==0.4.0
 coverage==4.5.1
+coveralls==1.5.1
+docopt==0.6.2
 flasgger==0.9.1
 Flask==1.0.2
 Flask-JWT==0.3.2
@@ -10,6 +14,7 @@ Flask-JWT-Extended==3.13.1
 Flask-JWT-Simple==0.0.3
 Flask-Login==0.4.1
 gunicorn==19.9.0
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 jsonschema==2.6.0
@@ -26,6 +31,8 @@ PyJWT==1.4.2
 pytest==3.8.2
 pytest-cov==2.6.0
 PyYAML==3.13
+requests==2.20.0
 six==1.11.0
 undecorated==0.3.0
+urllib3==1.24
 Werkzeug==0.14.1
