--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
   - "psql -c 'create database test_store_managerdb;' -U postgres"
   
 script:
-  - python3 -m pytest -v --cov api/
+  - python3 -m pytest -v --cov api/tests
 
 after_success:
   - coveralls
