--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ services:
 env:
   global:
     - APP_SETTINGS ='testing'
+    - ADMIN_PWD="testAdmin"
 
 install:
   - "pip install -r requirements.txt"
